[tool.poetry]
name = "pocketsmith"
version = "0.1.0"
description = ""
authors = ["Jethro <jethro.kairys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pydantic = "^1.10.4"
typer = "^0.7.0"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
